syntax = "proto3";


package proto;

option go_package="./pkg/pb";

import "google/protobuf/timestamp.proto";

service AuthService{
    rpc SignUp( SignUpRequest) returns(SignUpResponse){};
    rpc SignIn(SignInRequest) returns (SignInResponse){};
    rpc VerifyAccessToken(VerifyAccessTokenRequest) returns (VerifyAccessTokenResponse){};
}

// sign up
message SignUpRequest {
    string email = 1;
    string password = 2;
}

message SignUpResponse{
    string user_id = 1;
}

// sign in
message SignInRequest{
    string email = 1;
    string password = 2;
}

message SignInResponse{
    string access_token = 1;
    google.protobuf.Timestamp expire_at = 2;
}

// token verify
message VerifyAccessTokenRequest{
    string access_token = 1;
}

message VerifyAccessTokenResponse{
    string token_id =1;
    string user_id = 2;
    string email = 3;
    string role = 4;
    google.protobuf.Timestamp expire_at = 5;
}
